<resources>
    <string name="app_name">Pc Controller</string>
    <string name="vol_up_button">-</string>
    <string name="vol_down_button">+</string>
    <string name="brightness_down_button">-</string>
    <string name="brightness_up_button">+</string>
    <string name="volume_bar">Volume</string>
    <string name="brightness_bar">Brightness</string>
    <string name="ts_activity_title">Connect your device</string>
    <string name="ts_activity_scan">Scan for devices</string>
    <string name="url_cmd_activity_title">Share your link</string>
    <string name="ec_button_text">Connect</string>
    <string name="todo">TODO</string>
    <string name="service_notification_title">PC Controller Active</string>
    <string name="touchpad_usage_info">
        <li>Short press for left click</li>\n
        <li>Long press for right click</li>\n
        <li>Move your finger around to move the cursor</li>\n
        <li>Press 2 times for double click</li>\n
        <li>Use 2 fingers to scroll up/down</li>
    </string>
    <string name="wait_for_permission_info">Accept the connection from your PC</string>
    <string name="computer_ip_text_input_placeholder">IP Address</string>
    <string name="scan_qr_code_info">Scan the in-app QR code</string>
    <string name="close_connection_button_text">Close connection</string>
    <string name="file_sharing_activity_title">Share your file</string>
    <string name="invalid_ip_address_toast_text">Invalid IP Address</string>
    <string name="connection_already_established_toast_text">A connection is already established</string>
    <string name="device_not_reachable_toast_text">The device is not reachable</string>
    <string name="connection_service_notification_text">Connected to</string>
    <string name="client_service_notification_text">PC Controller is active</string>
    <string name="device_not_connected_text">No device connected</string>
    <string name="connect_to_a_device_button_text">Connect to a device</string>
    <string name="send_file_button_text">Send file</string>
    <string name="send_link_button_text">Send link</string>
    <string name="invalid_file_toast_text">Invalid file</string>
    <string name="invalid_link_toast_text">Invalid link</string>
    <string name="no_file_selected_text">No file selected</string>
    <string name="selected_file_size_text">Size</string>
    <string name="selected_file_name_text">Name</string>
    <string name="selected_file_type_text">Type</string>
    <string name="unknown_value_text">Unknown</string>
    <string name="activity_main_menu_action_settings">Settings</string>
    <string name="activity_main_menu_action_recently_connected_devices">Devices</string>
    <string name="activity_main_menu_action_help">Help</string>
    <string name="activity_main_control_interface_menu_action_disconnect">Disconnect</string>
    <string name="activity_touchpad_action_keyboard">Keyboard</string>
    <string name="activity_touchpad_action_keyboard_voice">Speech</string>
    <string name="open_drawer_content_description">Open</string>
    <string name="close_drawer_content_description">Close</string>
    <string name="drawer_action_remote_control">Remote control</string>
    <string name="drawer_action_file_sharing">File sharing</string>
    <string name="drawer_action_link_sharing">Link sharing</string>
    <string name="drawer_action_touchpad" translatable="false">Touchpad</string>
    <string name="drawer_action_settings">Settings</string>
    <string name="drawer_action_help_and_feedback">Help and feedback</string>
    <string name="drawer_action_about">About</string>
    <string name="drawer_section_title_more">More</string>
    <string name="action_close_app">Close app</string>
    <string name="action_connect_using_ip">Connect using IP Address</string>
    <string name="connect_using_ip_dialog_title">Connect using IP</string>
    <string name="connect_using_ip_dialog_ok">OK</string>
    <string name="connect_using_ip_dialog_cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>
    <string name="appearance_header">Appearance</string>
    <string name="touchpad_header" translatable="false">Touchpad</string>
    <string name="notifications_header">Notifications</string>
    <string name="no_link_selected_text">No link selected</string>
    <string name="add_link_dialog_title">Add link</string>
    <string name="add_link_dialog_cancel">Cancel</string>
    <string name="add_link_dialog_input_hint">Enter Link</string>
    <string name="action_add_new_link">Add link</string>
    <string name="link_sharing_action_mode_title">selected</string>
    <string name="link_sharing_action_mode_title_plural">selected</string>
    <string name="edit_link_dialog_title">Edit link</string>
</resources>