...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground">


        <ImageButton
            android:id="@+id/start_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:onClick="startScanButtonClick"
            android:padding="@dimen/main_activity_scan_image_padding"
            app:layout_constraintEnd_toEndOf="parent"
...
